2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Split process_flags(), check_perms(), and update_shell()
	out of main().
	* src/chsh.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chsh.c: Avoid implicit brackets.
	* src/chsh.c: Avoid assignments in comparisons.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c: New function: process_flags() split out of main().
	The flags variables are now global.
	* src/chfn.c: New functions: check_perms(), update_gecos(),
	get_old_fields(), and check_fields() split out of main().
	* src/chfn.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chfn.c: Avoid implicit brackets.
	* src/chfn.c: Document may_change_field().
	* src/chfn.c: Avoid implicit conversions to booleans.
	* src/chfn.c: Avoid assignments in comparisons.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Compilation fix for PAM support (pamh needs to be
	global since the function split).
	* src/chpasswd.c: Likewise.
	* src/chgpasswd.c: Likewise.
	* src/chpasswd.c: Avoid implicit conversions to booleans.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Fix typo: s/maximim/maximum/
	* src/chage.c: New function: fail_exit(). Change most of the exit()
	to a fail_exit, which makes sure the files are unlocked (new global
	variables: pw_locked, spw_locked), the PAM transaction is ended, and
	the failure is logged to libaudit (use a global user_name and user_uid
	for logging).
	* src/chage.c: Compilation fix for PAM support (pamh needs to be
	global since the function split).
	* src/chage.c: Document process_flags(), check_flags(), check_perms(),
	open_files(), and close_files().
	* src/chage.c: Split update_age() and get_defaults() out of main()